--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 body{
     background-color: bisque;
@@ -26,22 +27,24 @@ main{
 }
 .content{
     background-color: white;
-    padding: 20px;
+    padding: 30px;
 }
 .content > h2{
-    font-weight:100;
-    color: gray;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    font-weight:300;
+    color:  hsl(228, 12%, 48%);
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    font-family: "Montserrat", sans-serif;
 }
 .content > h1{
     padding: 20px 0;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   font-size: 2rem;
+   font-family: "Fraunces", serif;
 }
 .content > p{
-    color: gray;
-    font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: hsl(228, 12%, 48%);
+    font-size: 14px;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    font-family: "Montserrat", sans-serif;
     line-height: 1.6;
 }
  .price{
@@ -49,14 +52,16 @@ main{
     display: flex;
     align-items: center;
     gap: 20px;
+    font-family: "Fraunces", serif;
  }
  .current{
     font-size: 44px;
-    color:green;
+    color:hsl(158, 36%, 37%);
+    
     font-weight: bolder;
  }
  .disc{
-    color: gray;
+    color:  hsl(228, 12%, 48%);
     text-decoration: line-through;
  }
  button{
@@ -65,10 +70,12 @@ main{
     justify-content: center;
     gap: 10px;
     width: 100%;
-    background-color: rgb(20, 56, 20);
+    background-color: hsl(158, 36%, 37%);
     color: white;
     font-weight: bold;
     padding: 15px;
     border-radius:7px;
-    outline: none;
+    font-family: "Montserrat", sans-serif;
+    border: 0;
+   cursor: pointer;
  }
