--- a/style.css
+++ b/style.css
@@ -10,23 +10,32 @@ body{
     align-items: center;
     justify-content: center;
     height: 100dvh;
+    width: 100%;
 }
 main{
     width: 50%;
-    height: 70dvh;
-    display: grid;
+    height: 450px;
+    display: flex;
     border-radius: 10px;
-   grid-template-columns: 1fr 1fr;
+   justify-content: flex-start;
     /* border: 2px solid red; */
     overflow: hidden;
 }
+main > div{
+    height: 100%;
+}
+.img{
+    height: 500px;
+    width: 100%;
+}
 .img > img{
     width: 100%;
-    max-height: 70dvh;
+    min-height:100%;
     
 }
 .content{
     background-color: white;
+    max-width: 50%; 
     padding: 30px;
 }
 .content > h2{
